# rust-learn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Trunk.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html
frontend/src/: main.rs
src/: calculator.rs  main.rs
