[workspace]
members = ["backend", "frontend"]
default-members = ["backend"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 3
# link time optimization using using whole-program analysis
lto = true
